# coregtkgen

./: autogen.sh  configure.ac  coregtkgen.pro
CoreGTK.xcodeproj/: project.pbxproj
coregtk.xcworkspace/: contents.xcworkspacedata
coregtkgen.xcodeproj/: project.pbxproj
coregtkgen.xcodeproj/xcuserdata/gungravekoga.xcuserdatad/xcschemes/: build-coregtkgen.xcscheme  (+1 more)
src/: Gir2Objc.h  Gir2Objc.m  Makefile  main.m
src/BaseClasses/: CGTK.h  CGTK.m  CGTKBase.h  CGTKBase.m  CGTKBaseBuilder.h  CGTKBaseBuilder.m  CGTKCallbackData.h  CGTKCallbackData.m  CGTKSignalConnector.h  CGTKSignalConnector.m  CGTKSignalData.h  CGTKSignalData.m  CGTKTypeWrapper.h
src/Config/: convert_type.map  extra_imports.map  extra_methods.map  global_conf.map  swap_types.map
src/GIR/: GIRApi.h  GIRApi.m  GIRArray.h  GIRArray.m  GIRBase.h  GIRBase.m  GIRClass.h  GIRClass.m  GIRConstant.h  GIRConstant.m  GIRConstructor.h  GIRConstructor.m  GIRDoc.h  GIRDoc.m  GIREnumeration.h  GIREnumeration.m  GIRField.h  GIRField.m  GIRFunction.h  GIRFunction.m  GIRImplements.h  GIRImplements.m  GIRInterface.h  GIRInterface.m  GIRMember.h  GIRMember.m  GIRMethod.h  GIRMethod.m  GIRNamespace.h  GIRNamespace.m  GIRParameter.h  GIRParameter.m  GIRPrerequisite.h  GIRPrerequisite.m  GIRProperty.h  GIRProperty.m  GIRReturnValue.h  GIRReturnValue.m  GIRType.h  GIRType.m  (+2 more)
src/Generator/: CGTKClass.h  CGTKClass.m  CGTKClassWriter.h  CGTKClassWriter.m  CGTKMethod.h  CGTKMethod.m  CGTKParameter.h  CGTKParameter.m  CGTKUtil.h  CGTKUtil.m
src/Output/: Makefile  main.m
src/XMLReader/: XMLReader.h  XMLReader.m
(+1 files in other folders)
